# libcoro

./: .gitignore  CMakeLists.txt  Config.cmake.in  Doxyfile  README.md  aggregator_8h_source.html  allocator_8h_source.html  annotated.html  async_8h_source.html  classcoro_1_1all__of-members.html  classcoro_1_1all__of.html  classcoro_1_1all__of__coll__graph.map  classcoro_1_1all__of__coll__graph.md5  classcoro_1_1all__of__inherit__graph.map  classcoro_1_1all__of__inherit__graph.md5  classcoro_1_1all__of_a24c5188cc718e3c3bfe085950d34e252.html  classcoro_1_1all__of_a8090b2d9e40ade860cbb5b93ea25cecf.html  classcoro_1_1all__of_a96cbbf7001920d152d8f39cffb8e5287.html  classcoro_1_1any-members.html  classcoro_1_1any.html  classcoro_1_1any__coll__graph.map  classcoro_1_1any__coll__graph.md5  classcoro_1_1any__of-members.html  classcoro_1_1any__of.html  classcoro_1_1any__of__coll__graph.map  classcoro_1_1any__of__coll__graph.md5  classcoro_1_1any__of__inherit__graph.map  classcoro_1_1any__of__inherit__graph.md5  classcoro_1_1any_a0d549755e3757100e12a4d1bce990151.html  classcoro_1_1any_a0de384ea7a827818a50e81ccf1ab012d.html  classcoro_1_1any_a2ca6ead2e8d2857f3a5227316461e96d.html  classcoro_1_1any_a324de76924decac5cc0ab06c2f4cffe8.html  classcoro_1_1any_a5dedfcaff89ba7ea15e740b6ac215bbf.html  classcoro_1_1any_a63e1788c7d5911a46876db8ce8babb44.html  classcoro_1_1any_a82195bd019753d42c74da39f5719da1a.html  classcoro_1_1any_a8280f72e8f0d8414b25c1376991832a3.html  classcoro_1_1any_a8abe1c1d62194ffdeeb07e17a7c25900.html  classcoro_1_1any_aa0c724710c17cbfe6af195a2cf9cb53d.html  classcoro_1_1any_aeaaf2b9415446a9dac4e9427ebf4079a.html  classcoro_1_1async-members.html  (+999 more)
.github/workflows/: cmake.yml  generate-doxygen.yml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+55 more)
src/coro/: CMakeLists.txt  aggregator.h  allocator.h  async.h  collector.h  common.h  condition.h  construct.h  cooperative.h  coro.h  coro_fiber.h  coro_linux.h  coro_single.h  coroutine.h  distributor.h  exceptions.h  fiber.h  frame.h  function.h  future.h  future_list.h  future_variant.h  generator.h  linux_signal.h  make_awaitable.h  mutex.h  on_leave.h  pool_alloc.h  prepared_coro.h  queue.h  reusabe_allocator.h  scheduler.h  semaphore.h  shared_future.h  stackful.h  subscription.h  sync_await.h  sync_context.h  target.h  thread_pool.h  (+3 more)
src/coro/extra/: timer.h
src/tests/: CMakeLists.txt  aggregator.cpp  all_compile.cpp  allocator.cpp  any.cpp  async_int.cpp  async_void.cpp  attach_promise.cpp  check.h  collector.cpp  condition.cpp  cooperative_multitasking.cpp  coro.cpp  destroy_coro.cpp  distributor.cpp  fiber.cpp  frame.cpp  future_all_any.cpp  future_forward.cpp  future_move.cpp  future_variant.cpp  generator.cpp  generator_args.cpp  make_awaitable.cpp  memory_resource.cpp  mutex.cpp  pool_alloc.cpp  scheduler.cpp  semaphore.cpp  shared_future.cpp  signals.cpp  stackful.cpp  thread_pool.cpp
src/tests.old/: CMakeLists.txt  aggregator.cpp  all_compile.cpp  allocator.cpp  async_int.cpp  async_void.cpp  check.h  cooperative_multitasking.cpp  coro.cpp  distributor.cpp  generator.cpp  mutex.cpp  pool_alloc.cpp  scheduler.cpp  shared_future.cpp  signals.cpp  stackful.cpp
src/tools/: CMakeLists.txt  getoptxx.h  to_single_header.cpp  vistrace.cpp
src/usecases/json/: CMakeLists.txt  main.cpp  parser.h  serializer.h  simple_json.h
